[package]
name = "axum-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0"
axum = "0"
tokio = {version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"] }
chrono = "0"
tower = { version = "0", features = ["full"] }
headers = "0.3"
jsonwebtoken = "8"
mime = "0"
uuid = { version = "1", features = ["serde", "v4"] }
hyper = {version = "0", features = ["full"] }
tower-http =  { version = "0", features = ["add-extension", "trace"] }
metrics = "0"
metrics-exporter-prometheus = "0"
utoipa = "0"

[dev-dependencies]
mockall = "0"
serde_json = "1"
